# blueprints_bot

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml
src/: bot_data.rs  common.rs  discord_utils.rs  encryption.rs  ftp.rs  logging.rs  main.rs  secrets.example.rs
src/commands/: add_server.rs  edit_server.rs  edit_server_uploaders.rs  edit_uploader_servers.rs  mod.rs  remove_server.rs  upload_blueprints.rs  version.rs
