[package]
name = "ccs_discord_bot"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.44"
colored = "3.1.1"
dotenv = "0.15.0"
itertools = "0.14.0"
regex = "1.12.3"
reqwest = { version = "0.13.2", features = ["stream"] }
rustls = "0.23.37"
serde = "1.0.228"
serde_json = "1.0.149"
suppaftp = { version = "7.1.0", default-features = false, features = ["tokio-rustls"] }
tokio = { version = "1.50.0", features = ["rt-multi-thread"] }
twilight = "0.17.1"
twilight-cache-inmemory = "0.17.1"
twilight-gateway = "0.17.1"
twilight-http = "0.17.1"
twilight-model = "0.17.1"
twilight-util = { version = "0.17.0", features = ["builder"] }
