[package]
name = "ccs_discord_bot"
version = "1.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10.3"
chrono = "0.4.44"
colored = "3.1.1"
cryptify = "3.2.1"
humansize = "2.1.3"
itertools = "0.14.0"
regex = "1.12.3"
reqwest = { version = "0.13.2", features = ["stream"] }
rustls = "0.23.37"
serde = "1.0.228"
serde_json = "1.0.149"
sha2 = "0.11.0"
suppaftp = { version = "7.1.0", default-features = false, features = ["tokio-rustls"] }
tokio = { version = "1.50.0", features = ["rt-multi-thread"] }
twilight = "0.17.1"
twilight-gateway = "0.17.1"
twilight-http = "0.17.1"
twilight-model = "0.17.1"
twilight-util = { version = "0.17.0", features = ["builder"] }
